-refactored Security.Access to other Gradle project... name only temporary to not use same root dir as kernbeisser -the agent is now visible at runtime -created more usable interface for Agent ->see rs.groump.Agent -agent now support java 21 -no more arguments are required to run agent, the agent does not have any dependencies on kernbeisser -> the kernbeisser app registers the AccessManager at the Agent class. -agent is now automatically build and is not unknown to developer -gradle can build now on Windows -ui forms in source code not byte code to support also other IDES -SettingValueConverter now manages deprecated database enum values -> no more reflection hacks required, which are not supported anymore in Java21 -ThrowableRunnable & ThrowableSupplier now support to run Access.withAccessManager() with handling Exception -Access.runUnchecked() is now a shortcut for AccessManager.withAccessManager(AccessManager.ACCESS_GRANTED, () -> ...) -Exception are now handled by the UserRelatedAccessManager